// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-marble-renderer mount empty 1`] = `
Object {
  "children": null,
  "diagram": "-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount empty 2`] = `null`;

exports[`react-marble-renderer mount hot 1`] = `
Object {
  "children": null,
  "diagram": "-^--b--",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount hot 2`] = `null`;

exports[`react-marble-renderer mount invalid operator 1`] = `
Object {
  "children": null,
  "diagram": "switchMap]",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount invalid operator 2`] = `null`;

exports[`react-marble-renderer mount one 1`] = `
Object {
  "children": null,
  "diagram": "-a-",
  "height": 500,
  "render": [Function],
  "width": 1000,
}
`;

exports[`react-marble-renderer mount one 2`] = `"<div></div>"`;

exports[`react-marble-renderer mount operator & expression 1`] = `
Object {
  "children": null,
  "diagram": "[filter]{i => i < 3}",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount operator & expression 2`] = `null`;

exports[`react-marble-renderer mount operator 1`] = `
Object {
  "children": null,
  "diagram": "[switchMap]",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount operator 2`] = `null`;

exports[`react-marble-renderer mount two consecutive 1`] = `
Object {
  "children": null,
  "diagram": "-cb-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount two consecutive 2`] = `null`;

exports[`react-marble-renderer mount with error 1`] = `
Object {
  "children": null,
  "diagram": "-b-#-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount with error 2`] = `null`;

exports[`react-marble-renderer mount with invalid group 1`] = `
Object {
  "children": null,
  "diagram": "-bcd)-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount with invalid group 2`] = `null`;

exports[`react-marble-renderer mount with sync group 1`] = `
Object {
  "children": null,
  "diagram": "-(bcd)-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount with sync group 2`] = `null`;

exports[`react-marble-renderer mount with unexpected character 1`] = `
Object {
  "children": null,
  "diagram": "->-",
  "height": 500,
  "render": null,
  "width": 1000,
}
`;

exports[`react-marble-renderer mount with unexpected character 2`] = `null`;
